docker compose y docker file